--- a/index.css
+++ b/index.css
@@ -4,8 +4,7 @@
     text-align:center;
 }
 
-.bio-result {
-    
+.bio-result { 
     text-align:center;
     background-color: rgb(255,255,255);
     width: 80%;
@@ -24,4 +23,13 @@
 .left-aligned {
     text-align: left;
     display: inline-block;
+}
+
+label {
+    display: inline-block;
+    width: 10em;
+}
+
+.wider {
+    width: 20em;
 }
