--- a/index.css
+++ b/index.css
@@ -2,6 +2,7 @@
     background-color: rgb(44, 44, 44);
     color: rgb(206, 206, 206);
     text-align:center;
+    font-family: fantasy;
 }
 
 .bio-result { 
